--- a/style.css
+++ b/style.css
@@ -122,3 +122,35 @@ nav ul li a:hover, a.active{
     display: flex;
     justify-content: space-between;
 }
+#next-page
+{
+     display: none; 
+    
+   
+}
+.confirmation h1{
+    margin-top: 50px;
+    margin-bottom: 10px;
+    color: #dcdde1;
+}
+.design-booking,.pay
+{  
+    width: 40%;
+    border: 3px solid #f7f1e3;
+    margin:0 auto;
+    color:  #130f40;
+    background-color: #ccebec;
+}
+.payment-method h2{
+    margin-top: 50px;
+    margin-bottom: 10px;
+    color: #dcdde1;  
+}
+.pay
+{
+    padding: 30px;
+}
+.pay img
+{
+    width: 35px;
+}
